Meu segundo commit

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
 	<h1>Treinamento GIT</h1>
+	
+	<p>Esta página tem como objetivo servir de teste para a operação do GIT</P>
 </body>
 </html>
