Criando a branch de desenvolvimento

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 	<h1>Treinamento GIT</h1>
 	
 	<p>Esta página tem como objetivo servir de teste para a operação do GIT</P>
+	<p>Começando o desenvolvimento na branch de desenvolvimento</P>
 </body>
 </html>
